test_regress/t/t_trace_dumpvars_missing_scope.out
%Error: t/t_trace_dumpvars_missing_scope.v:28:5: $dumpvars target not found: missing_module
   28 |     $dumpvars(0, missing_module);
      |     ^~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
